@@ -46,10 +46,14 @@ public:
 
   int get_ff_device() const { return 0; }
 
+  int get_led_status() const { return m_led_status; }
+  void set_led_status(int v)  { m_led_status = v; }
+
 private:
   std::map<int, ControllerOptions> m_options;
   std::vector<ControllerMatchRulePtr> m_match_rules;
   bool m_force_feedback;
+  int m_led_status;
 };
 
 #endif
