@@ -15,6 +15,7 @@ xboxdrv 0.7.1 - (??/???/2011)
 * added support for Playstation button names (triangle,
   circle, square, cross, L1, L2, L3, R1, R2, R3)
 * added --on-connect and --on-disconnect to xboxdrv --daemon
+* added ability to set LED per controller slot
 
 
 xboxdrv 0.7.0 - (28/Jan/2011)
